[gd_scene load_steps=2 format=3 uid="uid://wait001"]

[ext_resource type="Script" path="res://scripts/lobby/waiting_room.gd" id="1"]

[node name="WaitingRoom" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.95, 0.93, 0.88, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 40

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="HeaderLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
text = "Waiting Room"
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1

[node name="RoomIdLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
text = "Room ID: ------"
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1
theme_override_colors/font_color = Color(0.8, 0.6, 0.1, 1)

[node name="StatusLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
text = "Waiting for players..."
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="PlayersLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
text = "Players:"
theme_override_font_sizes/font_size = 22

[node name="PlayerList" type="VBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="AIButtonRow" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 15

[node name="AddAIButton" type="Button" parent="MarginContainer/VBox/AIButtonRow"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 55)
theme_override_font_sizes/font_size = 18
text = "+ AI"

[node name="RemoveAIButton" type="Button" parent="MarginContainer/VBox/AIButtonRow"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 55)
theme_override_font_sizes/font_size = 18
text = "- AI"

[node name="DifficultyRow" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 8

[node name="DiffLabel" type="Label" parent="MarginContainer/VBox/DifficultyRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "AI:"

[node name="EasyBtn" type="Button" parent="MarginContainer/VBox/DifficultyRow"]
layout_mode = 2
custom_minimum_size = Vector2(80, 40)
theme_override_font_sizes/font_size = 14
text = "Easy"
toggle_mode = true

[node name="NormalBtn" type="Button" parent="MarginContainer/VBox/DifficultyRow"]
layout_mode = 2
custom_minimum_size = Vector2(80, 40)
theme_override_font_sizes/font_size = 14
text = "Normal"
toggle_mode = true
button_pressed = true

[node name="HardBtn" type="Button" parent="MarginContainer/VBox/DifficultyRow"]
layout_mode = 2
custom_minimum_size = Vector2(80, 40)
theme_override_font_sizes/font_size = 14
text = "Hard"
toggle_mode = true

[node name="Spacer" type="Control" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="StartButton" type="Button" parent="MarginContainer/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 70)
theme_override_font_sizes/font_size = 26
text = "Start Game"
disabled = true

[node name="BackButton" type="Button" parent="MarginContainer/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 55)
theme_override_font_sizes/font_size = 20
text = "Back to Lobby"
